Breaking change: fix html overflow
May cause problems in the future, for example, the `position: sticky` will not work

--- a/web-app/client/src/styles/globals.scss
+++ b/web-app/client/src/styles/globals.scss
@@ -8,6 +8,7 @@ html, body, #__next {
 html {
   font-size: 20px;
   color: $black;
+  overflow: hidden;
 }
 
 h1 {
